Fixed issues with packages not being found