@@ -1,28 +1,27 @@
 package eu.oberon.oss.chess.move.generator;
 
-import org.jetbrains.annotations.NotNull;
-import eu.oberon.oss.chess.base.enums.CBRanks;
-import eu.oberon.oss.chess.base.enums.ChessField;
-import eu.oberon.oss.chess.base.enums.MoveDirection;
-import eu.oberon.oss.chess.base.enums.PieceType;
-
+import eu.oberon.oss.chess.base.defs.enums.CBRanks;
+import eu.oberon.oss.chess.base.defs.enums.ChessField;
+import eu.oberon.oss.chess.base.defs.enums.MoveDirection;
+import eu.oberon.oss.chess.base.defs.enums.PieceType;
+import eu.oberon.oss.chess.base.defs.interfaces.Field;
+import eu.oberon.oss.chess.base.defs.interfaces.Move;
+import eu.oberon.oss.chess.base.defs.interfaces.Piece;
+import eu.oberon.oss.chess.base.defs.interfaces.Position;
 import eu.oberon.oss.chess.base.impl.MoveImpl;
-import eu.oberon.oss.chess.base.interfaces.Field;
-import eu.oberon.oss.chess.base.interfaces.Move;
-import eu.oberon.oss.chess.base.interfaces.Piece;
-import eu.oberon.oss.chess.base.interfaces.Position;
 import eu.oberon.oss.chess.move.generator.tables.Direction;
 import eu.oberon.oss.chess.move.generator.tables.TargetFieldMapping;
+import org.jetbrains.annotations.NotNull;
 
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 
-import static eu.oberon.oss.chess.base.enums.ChessColor.BLACK;
-import static eu.oberon.oss.chess.base.enums.ChessColor.WHITE;
-import static eu.oberon.oss.chess.base.enums.MoveDirection.*;
-import static eu.oberon.oss.chess.base.enums.PieceType.*;
-import static eu.oberon.oss.chess.base.interfaces.Move.*;
+import static eu.oberon.oss.chess.base.defs.enums.ChessColor.BLACK;
+import static eu.oberon.oss.chess.base.defs.enums.ChessColor.WHITE;
+import static eu.oberon.oss.chess.base.defs.enums.MoveDirection.*;
+import static eu.oberon.oss.chess.base.defs.enums.PieceType.*;
+import static eu.oberon.oss.chess.base.defs.interfaces.Move.*;
 
 /**
  * @author TigerLilly64
@@ -74,7 +73,7 @@ public class PawnMoveGenerator {
             } else if (position.enPassantField() != null) {
                 addEnPassantMove(
                     moves,
-                    currentDirection.getTargetFields().get(0),
+                        currentDirection.getTargetFields().getFirst(),
                     position.enPassantField(),
                     pieceMapping,
                     pieceToMove
@@ -84,7 +83,7 @@ public class PawnMoveGenerator {
                     pieceMapping,
                     moves,
                     pieceToMove,
-                    currentDirection.getTargetFields().get(0)
+                        currentDirection.getTargetFields().getFirst()
                 );
             }
         }
